# Game_of_Life

./: CMakeLists.txt  display.cpp  display.h  game_of_life.cpp  game_of_life.h  main.cpp
